refactor theme model to store all fields in an external table work in progress on theme ui

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2795,6 +2795,7 @@ en:
         theme:
           title: "Themes"
           long_title: "Amend colors, CSS and HTML contents of your site"
+          edit: "Edit"
 
         colors:
           title: "Colors"
