Start showing color scheme combo box

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2711,6 +2711,7 @@ en:
 
   color_schemes:
     base_theme_name: "Base"
+    default: "Light Scheme"
 
   about: "About"
   guidelines: "Guidelines"
